Add README file and update one segue

--- a/Dropbox/Base.lproj/Main.storyboard
+++ b/Dropbox/Base.lproj/Main.storyboard
@@ -487,7 +487,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="jsb-ju-58b" kind="modal" id="IZR-mD-ruB"/>
+                                    <segue destination="jsb-ju-58b" kind="modal" animates="NO" id="IZR-mD-ruB"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1122,10 +1122,10 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="cRR-8n-1Og"/>
+        <segue reference="1rK-eQ-RmH"/>
+        <segue reference="DQ7-Ph-Kfb"/>
         <segue reference="XPF-Zf-lkL"/>
         <segue reference="gbr-N3-qBf"/>
-        <segue reference="DQ7-Ph-Kfb"/>
-        <segue reference="JyM-ya-SgO"/>
-        <segue reference="cRR-8n-1Og"/>
     </inferredMetricsTieBreakers>
 </document>
